--- a/src/components/Task-List/Task-List.css
+++ b/src/components/Task-List/Task-List.css
@@ -19,13 +19,6 @@
   padding: 0;
 }
 
-.todo-list li.editing .edit {
-  display: block;
-  width: calc(100% - 43px);
-  padding: 12px 16px;
-  margin: 0 0 0 43px;
-}
-
 .todo-list li label {
   display: flex;
   align-items: center;
@@ -33,32 +26,13 @@
   padding: 15px 85px 15px 60px;
 }
 
-.todo-list li label .created {
-  font-size: 13px;
-  color: gray;
-}
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  .toggle-all,
+  .todo-list li .toggle {
+    background: none;
+  }
 
-.todo-list li .edit {
-  display: none;
-}
-
-.todo-list li.editing:last-child {
-  margin-bottom: -1px;
-}
-
-.edit {
-  position: relative;
-  margin: 0;
-  width: 100%;
-  font-size: 24px;
-  font-family: inherit;
-  font-weight: inherit;
-  line-height: 1.4em;
-  color: inherit;
-  padding: 6px;
-  border: 1px solid #999;
-  box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
-  box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  .todo-list li .toggle {
+    height: 40px;
+  }
 }
